WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
312683
[block-in-inline] margin-trim: block-start does not apply to blocks nested in inline boxes
https://bugs.webkit.org/show_bug.cgi?id=312683
Summary
[block-in-inline] margin-trim: block-start does not apply to blocks nested in...
alan
Reported
2026-04-18 09:42:07 PDT
ssia
Attachments
[fast-cq]Patch
(5.16 KB, patch)
2026-04-18 10:05 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2026-04-18 10:05:00 PDT
Created
attachment 479200
[details]
[fast-cq]Patch
EWS
Comment 2
2026-04-20 07:03:21 PDT
Committed
311584@main
(c736c2ddd565): <
https://commits.webkit.org/311584@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 479200
[details]
.
Radar WebKit Bug Importer
Comment 3
2026-04-20 07:04:11 PDT
<
rdar://problem/175162899
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug